# helix

./: .gitignore
backend/: main.py  openapi.yaml  package.json  pnpm-lock.yaml  pyproject.toml
backend/api/: deps.py  router.py
backend/api/endpoints/: admin.py  appointments.py  auth.py  faculty.py  health.py  projects.py  teams.py  users.py
backend/app/: main.py
backend/core/: config.py  security.py
backend/db/: session.py
backend/models/: appointment.py  faculty.py  project.py  team.py  user.py
backend/schemas/: models.py
backend/tests/: conftest.py
backend/tests/api/: test_appointments.py  test_auth.py  test_faculty.py  test_projects.py  test_teams.py
frontend/: README.md  package.json  pnpm-lock.yaml  tsc-errors.txt
frontend/app/: layout.tsx  page.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/layouts/: DashboardLayout.tsx
frontend/components/providers/: AuthProvider.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  StatCard.tsx
frontend/lib/: api.ts  auth.ts  navItems.ts  openapi.ts
frontend/src/api/: index.ts
frontend/src/api/core/: OpenAPI.ts
frontend/src/api/models/: Appointment.ts  AppointmentBase.ts  AppointmentCreate.ts  AppointmentIdParam.ts  AppointmentStatus.ts  AppointmentUpdate.ts  AppointmentWithDetails.ts  AvailabilityIdParam.ts  AvailabilitySource.ts  AvailabilityStatus.ts  DayOfWeek.ts  ErrorResponse.ts  JoinTeamRequest.ts  (+31 more)
frontend/store/: authStore.ts
frontend/types/: index.ts
ocr/: ocr.py
(+32 files in other folders)
